Fixed alignment issue in profile; added required field styles and marked fields in registration

--- a/application/content/css/site.css
+++ b/application/content/css/site.css
@@ -605,3 +605,12 @@ span {
     display: initial;
     color: #adadad;
 }
+
+label.required::after{
+    content: "*";
+    position: relative;
+    left: 3px;
+    color: #ff9800;
+    font-weight: bolder;
+    font-size: 22px;
+}
